[gd_scene load_steps=12 format=3 uid="uid://cx1bqqp4wqpx0"]

[ext_resource type="Script" path="res://scripts/rat.gd" id="1_ucq6r"]
[ext_resource type="Texture2D" uid="uid://bekxfi37nb3cw" path="res://assets/sprites/Rat1.png" id="2_5flw2"]
[ext_resource type="PackedScene" uid="uid://06u2inmc5phm" path="res://scenes/death.tscn" id="3_157so"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8kt2q"]
atlas = ExtResource("2_5flw2")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r36bu"]
atlas = ExtResource("2_5flw2")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywgcb"]
atlas = ExtResource("2_5flw2")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2tv3"]
atlas = ExtResource("2_5flw2")
region = Rect2(96, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vj7q"]
atlas = ExtResource("2_5flw2")
region = Rect2(128, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6m2i"]
atlas = ExtResource("2_5flw2")
region = Rect2(160, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_boopj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kt2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r36bu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywgcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2tv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vj7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6m2i")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a3st8"]
size = Vector2(18.5, 8)

[node name="Rat" type="Node2D"]
script = ExtResource("1_ucq6r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_boopj")
autoplay = "default"
frame_progress = 0.9862

[node name="Death" parent="." instance=ExtResource("3_157so")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
position = Vector2(6.25, 3)
shape = SubResource("RectangleShape2D_a3st8")

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-19, 0)

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(18, 0)

[connection signal="body_entered" from="Death" to="." method="_on_death_body_entered"]
